ユーザー登録ホーム作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,15 @@
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
+
 <p style="color: green"><%= notice %></p>
 
 <%= render @user %>
@@ -5,6 +17,13 @@
 <div>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
   <%= link_to "Back to users", users_path %>
-
+  <br>
+  <br>
+  <%= "作成日時 + #{@user.created_at}" %>
+  <br>
+  <%= "更新日時 + #{@user.updated_at}" %>
+  <br>
+  <%= "現在時刻は + #{Time.new} + です"%>
+  <br>
   <%= button_to "Destroy this user", @user, method: :delete %>
 </div>
