--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
   <body>
     <%= render 'layouts/header' %>
@@ -23,3 +24,14 @@
     </div>
   </body>
 </html>
+
+<%# アノテーションメモ %>
+<%# TODO:	あとで追加、修正するべき機能がある。
+FIXME:	既知の不具合があるコード。修正が必要。
+HACK:	あまりきれいじゃないコード。リファクタリングが必要。
+XXX:	危険！動くけどなぜうごくかわからない。
+REVIEW:	意図した通りに動くか、見直す必要がある。
+OPTIMIZE:	無駄が多く、ボトルネックになっている。
+CHANGED:	コードをどのように変更したか。
+NOTE:	なぜ、こうなったという情報を残す。
+WARNING:	注意が必要。 %>
