--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -103,7 +103,23 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
-
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      };
+    }
+  }
+}
 /* miscellaneous */
 
 .debug_dump {
