--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,17 @@
-<%= form_with(model: user) do |form| %>
-  <% if user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= form_with(model: @user) do |form| %>
+  <%= render 'shared/error_messages', object: @user %>
 
-      <ul>
-        <% user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= form.label :name%>
+  <%= form.text_field :name, class: "form-control"  %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+  <%= form.label :email%>
+  <%= form.text_field :email, class: "form-control"  %>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-  </div>
+  <%= form.label :password%>
+  <%= form.text_field :password, class: "form-control"  %>
 
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.label :password_confirmation%>
+  <%= form.text_field :password_confirmation, class: "form-control"  %>
+
+  <%= form.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
