--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <p style="color: green"><%= notice %></p>
 
-<%= render @user %>
+<%# <%= render @user %> %>
 
 <div>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
