--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -9,7 +9,7 @@
       <%= hidden_field_tag :email, @user.email %>
 
       <%= f.label :password %>
-      <%= f.password_field: :password, class: 'form-control' %>
+      <%= f.password_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, 'Confirmation' %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
