--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @user) do |form| %>
-  <%= render 'shared/error_messages', object: @user %>
+  <%= render 'shared/error_messages', object: form.object %>
 
   <%= form.label :name%>
   <%= form.text_field :name, class: "form-control"  %>
