--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -4,4 +4,7 @@
     <%= f.text_area :countent, placeholder: 'Compose new micropost...' %>
   </div>
   <%= f.submit 'Post', class: 'btn btn-primary' %>
+  <span class="image">
+    <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
+  </span>
 <% end %>
